# ncm-desktop-for-linux

./: .gitignore  LICENSE  PKGBUILD  README.md  auto_test.js  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts
.github/workflows/: webpack.yml
native/: Cargo.toml  build.rs  package-lock.json  package.json  test_latency.rs
native/examples/: decodescan.rs  latency.rs  seekprobe.rs
native/src/: audio_player copy.rs  audio_player.rs  lib.rs  runtime.rs
native/src/audio/: backend.rs  cache_tracker.rs  decoder.rs  device_reservation.rs  http_client.rs  mod.rs  player.rs  source.rs  state.rs  utils.rs
native/src/bindings/: cache_service.rs  mod.rs
native/src/cache/: catalog.rs  error.rs  eviction.rs  io_util.rs  mod.rs  service.rs  settings.rs  song.rs  storage.rs  types.rs
native/src/player/: backend.rs  command.rs  mod.rs  service.rs  state.rs  tests.rs  types.rs  worker.rs
packaging/: ncm-desktop-for-linux.desktop  ncm-desktop-for-linux.sh
scripts/: native-seek-regression.cjs  reproduce-song-1347630432-progress.cjs  test-web-audio-cache.dev.js
src/main/: index.ts
src/main/api/: ipc.ts  service.ts
src/main/api/ipc/: registerCacheApi.ts  registerLibraryApi.ts  registerMusicApi.ts  registerNativeApi.ts  registerUiApi.ts
src/main/api/native/: loadNativeModule.ts
src/main/api/protocol/: registerCacheProtocol.ts
src/main/api/service/: cacheService.ts  (+4 more)
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.vue  env.d.ts  main.ts
(+112 files in other folders)
