[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
name = "native"
crate-type = ["cdylib"]

[dependencies]
napi = {version = "3.7.1", features = ["tokio_rt"]}
napi-derive = "3.4.1"
once_cell = "1.21.3"
cpal = "0.17.1"
alsa = "0.11.0"
symphonia = { version = "0.5", features = ["all-formats", "all-codecs"] }
ringbuf = "0.4.8"
stream-download = {version ="0.24.0",  features = ["reqwest-rustls"]}
reqwest = { version = "0.13.1", features = ["stream", "native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
hex = "0.4"

[build-dependencies]
napi-build = "2.3.1"
